adding contrat missing services